--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="style.css" rel="stylesheet">
 		<title>Everestus Login page	</title>
 	</head>
