--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<div class="loginbox">
 		<img class="avatar" src="avatar.png">
 		<h1>Login Here</h1>
-		<form method="POST" action="login2.html">
+		<form method="POST" action="https://everestusndukwe.github.io/web-project/login2.html">
 		<p class="username">Username</p>
 		<input type="text" name="" placeholder="Enter Username">
 		<p  class="password"> Password</p>
