--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	<body>
 		<div class="loginbox">
 		<img class="avatar" src="avatar.png">
-		<h1>Login Here</h1>
+		<h1>Login Here <br />
+			Welcome Rachel</h1>
 		<form >
 		<p class="username">Username</p>
 		<input type="text" name="" placeholder="Enter Username">
