--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 	<body>
 		<div class="loginbox">
 		<img class="avatar" src="avatar.png">
-		<h1>Login Here <br />
-			Welcome Rachel</h1>
+		<h1> Welcome Rachel<br /><br />
+			Login Here 
+			</h1>
 		<form >
 		<p class="username">Username</p>
 		<input type="text" name="" placeholder="Enter Username">
