--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 	<body>
 		<div class="loginbox">
 		<img class="avatar" src="avatar.png">
-		<h1> Welcome Rachel<br /><br />
-			Login Here 
-			</h1>
+		<h1> Login Here </h1>
 		<form >
 		<p class="username">Username</p>
 		<input type="text" name="" placeholder="Enter Username">
